# DocMorph

./: .gitignore  README.md  io.github.resorgatto.docmorph.json  meson.build
data/: io.github.resorgatto.docmorph.desktop.in  io.github.resorgatto.docmorph.gschema.xml  io.github.resorgatto.docmorph.metainfo.xml.in  io.github.resorgatto.docmorph.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: docmorph.gresource.xml  docmorph.in  main.py  meson.build  window.blp  window.py
